Registered Auth Service in Service Discovery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=jobPortalServiceDiscovery
+
+server.port=8761
+
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+
+
